--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -13,6 +13,7 @@
         <file>username.svg</file>
         <file>password.svg</file>
         <file>logo.png</file>
+        <file>harddisk.svg</file>
         <file>de-logo/cinnamon.png</file>
         <file>de-logo/dde.png</file>
         <file>de-logo/gnome.png</file>
