--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -12,6 +12,7 @@
         <file>nextButtonPressed.png</file>
         <file>username.svg</file>
         <file>password.svg</file>
+        <file>package.svg</file>
         <file>logo.png</file>
         <file>harddisk.svg</file>
         <file>de-logo/cinnamon.png</file>
